opam-version: "2.0"
name: "wye"
version: "1.0.0"
maintainer: "Liam Marshall <limarshall@wisc.edu>"
authors: ["Liam Marshall <limarshall@wisc.edu>"]
homepage: "https://liamim.github.io/wye"
bug-reports: "https://github.com/liamim/wye/issues"
dev-repo: "https://github.com/liamim/wye"
license: "ISC"
tags: ["programming-language" "compiler"]
build: [
	["jbuilder" "build" "-p" name "-j" jobs]
]
build-test: [
	["jbuilder" "runtest" "-p" name "-j" jobs]
]
